Fix some layout issues

--- a/src/style.less
+++ b/src/style.less
@@ -9,6 +9,7 @@ html {
 header,
 footer {
     text-align: center;
+    margin-bottom: 14px;
 }
 
 header .logo {
